<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="shoe"
            type="com.eslam.shoestore.domain.entity.Shoe" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/addNewShoeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/addShoe"
            android:textColor="@color/black"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeNameTextInputLayout"
            style="@style/AppTheme.loginSignUp_textInputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shoe_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addNewShoeTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoeNameTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusedByDefault="true"
                android:text="@={shoe.name}"
                tools:ignore="UnusedAttribute" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyNameTextInputLayout"
            style="@style/AppTheme.loginSignUp_textInputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/company_name"
            app:layout_constraintTop_toBottomOf="@id/shoeNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/companyNameTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoe.company}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/descriptionTextInputLayout"
            style="@style/AppTheme.loginSignUp_textInputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/shoe_description"
            app:layout_constraintTop_toBottomOf="@id/companyNameTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/descriptionTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={shoe.description}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/shoeSizeTextInputLayout"
            style="@style/AppTheme.loginSignUp_textInputTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:hint="@string/shoe_size"
            app:layout_constraintTop_toBottomOf="@id/descriptionTextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/shoeSizeTextInputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:minWidth="120dp"
            android:text="@string/cancel"
            app:layout_constraintEnd_toStartOf="@+id/saveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/shoeSizeTextInputLayout" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="120dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/cancelButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancelButton"
            app:layout_constraintTop_toTopOf="@+id/cancelButton" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>